# easyxtb

./: pyproject.toml
src/easyxtb/: __init__.py  calculate.py  configuration.py  geometry.py  program.py
tests/: test_calc.py  test_io.py
