[project]
name = "easyxtb"
version = "0.8.1"
description = "A Python API for xtb (and CREST)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.urls]
Homepage = "https://github.com/matterhorn103/easyxtb"
Issues = "https://github.com/matterhorn103/easyxtb/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
